--- a/config.yaml
+++ b/config.yaml
@@ -8,7 +8,7 @@ general:
   world_size: 4
   rank: 0
   device: "cuda"
-  load_trained_model_for_testing: True 
+  load_trained_model_for_testing: False 
 
 dataset:
   path_to_data: "/data/shared/cataract-1K/phase_recognition"
@@ -24,7 +24,7 @@ training:
   general:
     clip: 1 
     batch_size: 16
-    epochs: 50
+    epochs: 1
     dropout: 0.1
     learning_rate: 0.0001
     weight_decay: 0.00001
